[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shim-instrument = { path = "../../shim-instrument" }
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing", "shim-instrument/tracing"]